syntax = "proto3";

import "message.proto";
import "onchain_event.proto";
import "username_proof.proto";

enum HubEventType {
  HUB_EVENT_TYPE_NONE = 0;
  HUB_EVENT_TYPE_MERGE_MESSAGE = 1;
  HUB_EVENT_TYPE_PRUNE_MESSAGE = 2;
  HUB_EVENT_TYPE_REVOKE_MESSAGE = 3;
// Deprecated
//  HUB_EVENT_TYPE_MERGE_ID_REGISTRY_EVENT = 4;
//  HUB_EVENT_TYPE_MERGE_NAME_REGISTRY_EVENT = 5;
  HUB_EVENT_TYPE_MERGE_USERNAME_PROOF = 6;
// Deprecated
//  HUB_EVENT_TYPE_MERGE_RENT_REGISTRY_EVENT = 7;
//  HUB_EVENT_TYPE_MERGE_STORAGE_ADMIN_REGISTRY_EVENT = 8;
  HUB_EVENT_TYPE_MERGE_ON_CHAIN_EVENT = 9;
}

message MergeMessageBody {
  Message message = 1;
  repeated Message deleted_messages = 2;
}

message PruneMessageBody {
  Message message = 1;
}

message RevokeMessageBody {
  Message message = 1;
}

message MergeOnChainEventBody {
  OnChainEvent on_chain_event = 1;
}

message MergeUserNameProofBody {
  UserNameProof username_proof = 1;
  UserNameProof deleted_username_proof = 2;
  Message username_proof_message = 3;
  Message deleted_username_proof_message = 4;
}

message HubEvent {
  HubEventType type = 1;
  uint64 id = 2;
  oneof body {
    MergeMessageBody merge_message_body = 3;
    PruneMessageBody prune_message_body = 4;
    RevokeMessageBody revoke_message_body = 5;
//    Deprecated
//    MergeIdRegistryEventBody merge_id_registry_event_body = 6;
//    MergeNameRegistryEventBody merge_name_registry_event_body = 7;
    MergeUserNameProofBody merge_username_proof_body = 8;
//    Deprecated
//    MergeRentRegistryEventBody merge_rent_registry_event_body = 9;
//    MergeStorageAdminRegistryEventBody merge_storage_admin_registry_event_body = 10;
    MergeOnChainEventBody merge_on_chain_event_body = 11;
  };
}
